--- a/index.html
+++ b/index.html
@@ -78,27 +78,19 @@
             <div class="col-12">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
-                            <span class="mbr-iconfont socicon-twitter socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="/" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
-                            <span class="mbr-iconfont socicon-tiktok socicon"></span>
-                        </a>
-                    </div>
+
                     <div class="soc-item">
-                        <a href="https://mobiri.se/" target="_blank">
+                        <a href="/" target="_blank">
                             <span class="mbr-iconfont socicon-youtube socicon"></span>
                         </a>
                     </div>
